<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/play"
        android:icon="@drawable/ic_baseline_play_circle_24"
        android:title="@string/play" />

    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_baseline_play_circle_24"
        android:title="@string/edit" />


    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_baseline_delete_forever_48"
        android:title="@string/delete" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share" />

    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/info" />
</menu>
